# local-deep-researcher

./: .env  .gitignore  PLAN.md  PROGRESS_APPROACHES.md  QUICKSTART.md  STACK_ANALYSIS.md  TODO.md  lms_helper.py  pyproject.toml  run.sh  test_models.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
migrations/: 0001_initial_schema.sql
src/ollama_deep_researcher/: cli_runner.py  utils.py
src/ollama_deep_researcher/auth/: __init__.py
src/server/: main.py  run.py
src/server/routes/: auth.py
